# agent-generator

./: .gitignore  ADK_CODEGEN_CONTRIB.md  CONTRIBUTING.md  README.md  README_verifier.md  REGISTRY_PROPOSAL.md  TODO.md  VERIFICATION_CRITERIA.md  adk_docs_ext_deep_dive.md  analysis.md  analysis_logging.md  analysis_report_v46_vs_v47.md  analysis_report_v47_failures.md  analyze_results_json.py  analyze_specific_run.py  architecture_diagram.md  architecture_diagram_ascii.md  architecture_diagram_v2.md  architecture_simple_1d.md  benchmark_logging_style.md  benchmark_output_test.jsonl  benchmark_run.sh  benchmark_viewer_plan.md  benchmarking_update.md  built_in_tools_report.md  built_in_tools_report_tests.md  case_by_case_analysis_run_2026_01_16.md  check_extensions.py  coding_failure_debug.txt  compare_runs_v6.py  compose.debug.yaml  compose.yaml  concurrency_results.json  conftest.py  current.md  debug_adk_agent.py  debug_adk_ext.sh  debug_adk_infra.py  debug_specific_run.py  extract_case_details.py  (+38 more)
ai/: README.md
tools/adk-knowledge-ext/: README.md  pyproject.toml
tools/adk-knowledge-ext/src/adk_knowledge_ext/: __init__.py  index.py  reader.py  search.py  server.py
tools/adk-knowledge-ext/tests/: test_integration.py  test_search_repro.py
tools/adk_knowledge_ext/: INSTRUCTIONS.template.md  MCP_SERVER_REPORT.md  README.md  TEST_REPORT.md  hatch_build.py  pyproject.toml
tools/adk_knowledge_ext/src/adk_knowledge_ext/: __init__.py  _version_git.py  build_utils.py  config.py  index.py  manage_mcp.py  models.py  reader.py  registry.json  registry.yaml  search.py  server.py
tools/adk_knowledge_ext/src/adk_knowledge_ext/data/: INSTRUCTIONS.md  manifest.yaml
tools/adk_knowledge_ext/tests/: README.md  test_debug_command.py  test_debug_edge_cases.py  test_integration.py  test_manage_mcp.py  test_remove_command.py  test_search_determinism.py  test_search_repro.py  test_tools_e2e.py  test_vector_search.py  verify_standalone_logic.py
tools/adk_knowledge_ext/tests/integration/: README.md  run_integration_tests.py  test_dynamic_clone.py  test_general.py  test_tools_e2e.py  test_vector_search.py
tools/adk_knowledge_ext/tests/integration/bundled_index/: Dockerfile  verify_bundled.py
tools/adk_knowledge_ext/tests/integration/common/: dummy_ranked_targets.yaml  verify_mcp_config.py
tools/adk_knowledge_ext/tests/integration/debug_command/: Dockerfile  verify_debug.py
tools/adk_knowledge_ext/tests/integration/extension_uvx/: Dockerfile  install_extension.py
tools/adk_knowledge_ext/tests/integration/full_lifecycle/: Dockerfile  verify_lifecycle.py
tools/adk_knowledge_ext/tests/integration/managed_claude/: Dockerfile  mock_claude.sh  verify_claude.py
tools/adk_knowledge_ext/tests/integration/managed_json_setup/: Dockerfile  verify_json.py
tools/adk_knowledge_ext/tests/integration/managed_setup/: Dockerfile  mock_gemini.sh  verify_managed_setup.py
tools/adk_knowledge_ext/tests/integration/manual_uvx/: Dockerfile
tools/adk_knowledge_ext/tests/integration/method1/: Dockerfile
tools/adk_knowledge_ext/tests/integration/method2/: Dockerfile  install_extension.py
tools/adk_knowledge_ext/tests/integration/method3/: Dockerfile  verify_resilience.py
tools/adk_knowledge_ext/tests/integration/method4/: Dockerfile  verify_missing_index.py
tools/adk_knowledge_ext/tests/integration/registry_lookup/: Dockerfile  verify_registry.py
tools/adk_knowledge_ext/tests/integration/registry_miss/: Dockerfile  verify_miss.py
tools/adk_knowledge_ext/tests/integration/resilience_invalid_version/: Dockerfile  verify_resilience.py
tools/adk_knowledge_ext/tests/unit/: test_manage_mcp.py  test_server.py
(+878 files in other folders)
