[project]
name = "case-quality"
version = "0.1.0"
description = "Agentic Benchmark Suite"
requires-python = ">=3.11, <3.14"
dependencies = [
    "pytest-xdist",
    "pytest-asyncio",
    "pytest-profiling",
    "google-adk==1.20.0",
    "google-cloud-build",
    "google-cloud-run",
    "litellm",
    "papermill",
    "streamlit",
    "pandas",
    "plotly",
    "colorama",
    "PyYAML",
    "google-cloud-storage",
    "rank-bm25",
    "python-dotenv",
    "questionary",
    "ipykernel",
    "codebase-knowledge-mcp",
    "pexpect",
    "anthropic[vertex]",
    "google-cloud-aiplatform"
]

[tool.uv.sources]
codebase-knowledge-mcp = { path = "tools/adk_knowledge_ext", editable = true }

[tool.pytest.ini_options]
testpaths = ["benchmarks/tests"]
asyncio_default_fixture_loop_scope = "module"
asyncio_mode = "auto"
addopts = "-rs -v -s"