[project]
name = "adk-knowledge-ext"
version = "0.1.0"
description = "Gemini CLI extension for ADK knowledge retrieval and agent execution"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "pyyaml",
    "rank-bm25",
    "fastmcp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adk_knowledge_ext"]

[project.scripts]
adk-knowledge-mcp = "adk_knowledge_ext.server:main"
