[project]
name = "codebase-knowledge-mcp"
version = "0.1.0"
description = "A repository-agnostic MCP server for deep codebase knowledge retrieval."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "pyyaml",
    "rank-bm25",
    "fastmcp",
]

[build-system]
requires = ["hatchling", "pyyaml"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adk_knowledge_ext"]

[project.scripts]
codebase-knowledge-mcp = "adk_knowledge_ext.server:main"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
